--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -15,7 +15,7 @@
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="" onclick="startGrabber();">Scrape One</a></li>
+                            <li><a href="#" onclick="startGrabber();">Scrape One</a></li>
                             <li><a href="#" >Scrape  Two</a></li>
                         </ul>
                     </li>
