--- a/application/templates/list_merchants.html
+++ b/application/templates/list_merchants.html
@@ -21,7 +21,7 @@
             {% for merchant in merchants %}
             <tr>
                 <td>{{ merchant }}</td>
-                <td>{{ merchants[merchant] }} pts/$</td>
+                <td>{{ merchants[merchant] }}</td>
             </tr>
             {% else %}
             <tr><td colspan="3">No merchants yet</td></tr>
