--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -9,6 +9,9 @@
             <a class="brand" href="/">Rewards</a>
             <div class="nav-collapse">
                 <ul class="nav">
+                    <li class="navbar-link">
+                        <a href="/results">All Data</a>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             Scrape
