--- a/application/templates/list_data.html
+++ b/application/templates/list_data.html
@@ -25,7 +25,7 @@
 
                 <script>
                     function showMerchants(result_id) {
-                        window.location.href = '/result/'+result_id;
+                        window.location.href = '/'+result_id;
                     }
                 </script>
             <tr onclick="showMerchants({{ result_id }});">
