--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -21,6 +21,7 @@
                             {% for site in site_names %}
                                 <li><a href="" onclick="event.preventDefault(); startGrabber('{{ site }}');">Scrape {{ site }}</a></li>
                             {% endfor %}
+                        <li class="divider"></li>
                             <li><a href="">Scrape more</a></li>
                         </ul>
                     </li>
