--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -12,6 +12,9 @@
                     <li class="navbar-link">
                         <a href="/results">All Data</a>
                     </li>
+                    <li class="navbar-link">
+                        <a href="/all_malls">All Malls</a>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             Scrape
