--- a/application/templates/all_malls.html
+++ b/application/templates/all_malls.html
@@ -17,17 +17,7 @@
         </select>
     </form>
 
-    <div class="nowrap">
 
-        <select id="choose_data" class="nowrap" style="width: 400px">
-            {% for result in results %}
-            {% set result_id = result.key.id() %}
-                <option value="{{ result_id }}" onclick="showResult({{ result_id }})">
-                    {{ ' - '.join([result.site_name, result.timestamp.strftime('%b %d, %Y %I:%M %p')]) }}
-                </option>
-            {% endfor %}
-        </select>
-    </div>
 
     <h3>
         Results from all sources from the last time {% if date %}
@@ -39,24 +29,12 @@
 
     <table class="table table-bordered table-striped sortable" >
         <thead style="background-color:#eee; font-weight: bold; cursor: default;">
-            {% if site == 'apple'  %}
-                <tr>
-                   <th >Name</th>
-                   <th>Model</th>
-                   <th>SKU</th>
-                   <th>Condition</th>
-                   <th>Quantity</th>
-                   <th>Location</th>
-                   <th>Date Grabbed</th>
-                </tr>
-            {% endif %}
-
             {% if site == '' %}
                 <tr>
                     <th>Vendor</th>
 
-                    {% for date in dates %}
-                        <th>{{ date }}</th>
+                    {% for header in headers %}
+                        <th>{{ headers[header] }}</th>
                     {% endfor %}
                 </tr>
             {% endif %}
@@ -70,6 +48,7 @@
                     <tr>
                         <td>{{ vendor }}</td>
                         {% set rates = data[vendor] %}
+
                         {% for rate in rates %}
                             <td class="sorttable_numeric">{{ rates[rate] }}</td>
                         {% endfor %}
