--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -15,6 +15,9 @@
                     <li class="navbar-link">
                         <a href="/all_malls">All Malls</a>
                     </li>
+                    <li class="navbar-link">
+                        <a href="/compare">Compare</a>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             Scrape
