Basic date search

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -30,7 +30,7 @@
             <input name="date" type="text" placeholder="Select date" id="datepicker">
 
             <select name="time" id="time_" style="width: 64px">
-                <option >AM</option>
+                <option value="00">AM</option>
                 <option >PM</option>
             </select>
             <br>
