Merchant page title

--- a/application/templates/test.html
+++ b/application/templates/test.html
@@ -21,6 +21,9 @@
         </select>
     </div>
 
+    <div>
+        <h3>Scraped from {{ site }} on {{ date }}</h3>
+    </div>
     <table class="table table-bordered table-striped sortable" >
         <thead style="background-color:#eee; font-weight: bold; cursor: default;">
             {% if site == 'apple'  %}
