'shop.amtrakguestrewards.com' and 'shop.lifemiles.com' grabber

--- a/application/templates/list_data.html
+++ b/application/templates/list_data.html
@@ -39,7 +39,7 @@
                 </td>
             </tr>
             {% else %}
-            <tr><td colspan="7">No results yet</td></tr>
+            <tr><td colspan="7">No results</td></tr>
             {% endfor %}
         </tbody>
     </table>
