search by time added AM/PM cheker

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -30,8 +30,8 @@
             <input name="date" type="text" placeholder="Select date" id="datepicker">
 
             <select name="time" id="time_" style="width: 64px">
-                <option value="00">AM</option>
-                <option >PM</option>
+                <option value="AM">AM</option>
+                <option value="PM">PM</option>
             </select>
             <br>
             <button type="submit" class="btn">Show</button>
