--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -32,12 +32,24 @@
                         </ul>
                     </li>
 
+                    {% if g.user %}
+                      <li><a href="{{ url_for('edit_profile') }}">profile</a>
+                      <li><a href="{{ url_for('logout') }}">sign out [{{ g.user.name }}]</a>
+                    {% else %}
+                      <li><a href="{{ url_for('login') }}">sign in</a>
+                    {% endif %}
+
 
                 </ul>
             </div><!--/.nav-collapse -->
         </div><!-- /.navbar .container -->
     </div><!-- /.navbar-inner -->
 </div><!-- /navbar -->
+
+{% for message in get_flashed_messages() %}
+  <p class=message>{{ message }}
+{% endfor %}
+
 
 <script>
 function startGrabber(site_name) {
